Stop tables from overflowing their parents

--- a/src/templates/theme.css
+++ b/src/templates/theme.css
@@ -67,6 +67,7 @@ p {
 }
 
 table {
+  table-layout:fixed;
   width: 100%;
   margin-bottom: 1rem;
   background-color: transparent;
